added menu and reservation

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
           <div class="reveal">
             <img
-              <a href="mailto:dimaensagh@gmail.com" aria-label="Email">@</a>
+              src="assets/img/image.png"
               alt="Ghanaian dishes"
               loading="lazy"
             />
