deleted image placeholders

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="icon" type="image/png" href="assets/img/logo2.png" />
+    <link rel="apple-touch-icon" href="assets/img/logo2.png" />
   </head>
   <body>
     <header>
@@ -174,7 +176,7 @@
         <div class="container split">
           <div class="reveal">
             <img
-              src="assets/img/logo.png"
+              src="assets/img/logo2.jpg"
               alt="About Dimaensa"
               loading="lazy"
             />
@@ -471,15 +473,53 @@
         </div>
         <div class="social">
           <a href="mailto:dimaensagh@gmail.com" aria-label="Email">
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M4 6h16a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1z" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M5 8l6.5 4.5a2 2 0 0 0 2.3 0L20 8" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+            <svg
+              width="18"
+              height="18"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M4 6h16a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1z"
+                stroke="currentColor"
+                stroke-width="1.6"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M5 8l6.5 4.5a2 2 0 0 0 2.3 0L20 8"
+                stroke="currentColor"
+                stroke-width="1.6"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
             </svg>
           </a>
-          <a href="https://wa.me/233242001247" target="_blank" rel="noopener" aria-label="WhatsApp">
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M12 3a9 9 0 0 0-7.9 13.2L3 21l4.9-1.1A9 9 0 1 0 12 3z" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M9.8 8.6c-.1-.3-.2-.3-.3-.3h-.3c-.1 0-.3 0-.5.2s-.6.5-.6 1.2.6 1.4.7 1.5c.1.2 1.2 1.9 3 2.6 1.5.6 1.8.5 2.1.5.3 0 1-.4 1.1-.8s.1-.7.1-.8c0-.1-.1-.2-.3-.3l-1-.5c-.1-.1-.2-.1-.3.1l-.4.6c-.1.1-.2.1-.3.1-.1 0-.6-.2-1.1-.6-.4-.3-.7-.8-.8-.9-.1-.1 0-.2.1-.3l.2-.2c.1-.1.1-.2.2-.3.1-.1 0-.2 0-.3l-.4-1c-.1-.1-.3-.2-.4-.2h-.3c-.3 0-.6.2-.7.3l-.3.4c-.2.2-.2.4-.1.7z" fill="currentColor"/>
+          <a
+            href="https://wa.me/233242001247"
+            target="_blank"
+            rel="noopener"
+            aria-label="WhatsApp"
+          >
+            <svg
+              width="18"
+              height="18"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M12 3a9 9 0 0 0-7.9 13.2L3 21l4.9-1.1A9 9 0 1 0 12 3z"
+                stroke="currentColor"
+                stroke-width="1.6"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M9.8 8.6c-.1-.3-.2-.3-.3-.3h-.3c-.1 0-.3 0-.5.2s-.6.5-.6 1.2.6 1.4.7 1.5c.1.2 1.2 1.9 3 2.6 1.5.6 1.8.5 2.1.5.3 0 1-.4 1.1-.8s.1-.7.1-.8c0-.1-.1-.2-.3-.3l-1-.5c-.1-.1-.2-.1-.3.1l-.4.6c-.1.1-.2.1-.3.1-.1 0-.6-.2-1.1-.6-.4-.3-.7-.8-.8-.9-.1-.1 0-.2.1-.3l.2-.2c.1-.1.1-.2.2-.3.1-.1 0-.2 0-.3l-.4-1c-.1-.1-.3-.2-.4-.2h-.3c-.3 0-.6.2-.7.3l-.3.4c-.2.2-.2.4-.1.7z"
+                fill="currentColor"
+              />
             </svg>
           </a>
           <a
@@ -488,10 +528,28 @@
             rel="noopener"
             aria-label="Instagram"
           >
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect x="4" y="4" width="16" height="16" rx="4" stroke="currentColor" stroke-width="1.6"/>
-              <path d="M12 9a3 3 0 1 0 0 6 3 3 0 0 0 0-6z" stroke="currentColor" stroke-width="1.6"/>
-              <circle cx="17" cy="7" r="1" fill="currentColor"/>
+            <svg
+              width="18"
+              height="18"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <rect
+                x="4"
+                y="4"
+                width="16"
+                height="16"
+                rx="4"
+                stroke="currentColor"
+                stroke-width="1.6"
+              />
+              <path
+                d="M12 9a3 3 0 1 0 0 6 3 3 0 0 0 0-6z"
+                stroke="currentColor"
+                stroke-width="1.6"
+              />
+              <circle cx="17" cy="7" r="1" fill="currentColor" />
             </svg>
           </a>
         </div>
