--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/css/styles.css" />
-    <link rel="icon" type="image/png" href="assets/img/logo2.png" />
-    <link rel="apple-touch-icon" href="assets/img/logo2.png" />
+    <link rel="icon" type="image/jpeg" href="assets/img/logo2.jpg" />
+    <link rel="apple-touch-icon" href="assets/img/logo2.jpg" />
+    <meta name="theme-color" content="#8B4513" />
   </head>
   <body>
     <header>
