removed explore us and visit us today

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
           <a href="#home">Home</a>
           <a href="#about">About</a>
           <a href="#menu">Menu</a>
-          <a href="#explore">Explore</a>
           <a href="#reservations">Reservations</a>
           <a href="#contact">Contact</a>
         </nav>
@@ -147,46 +146,18 @@
         </div>
       </section>
 
-      <section class="section" id="visit">
-        <div class="container split">
-          <div class="reveal">
-            <h2
-              style="font-family: 'Playfair Display', serif; margin: 0 0 12px"
-            >
-              Visit Us Today
-            </h2>
-            <p>
-              Experience warm Ghanaian hospitality with every meal. Drop by,
-              dine in, and enjoy the flavors that feel like home.
-            </p>
-          </div>
-          <div class="reveal">
-            <iframe
-              class="map-embed"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.6091522927417!2d-0.213!3d5.610!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNcKwMzYnMzYuMCJOIDDCsDEyJzQ2LjgiVw!5e0!3m2!1sen!2sgh!4v00000000000"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-              title="Google map - Visit Us"
-            ></iframe>
-          </div>
-        </div>
-      </section>
-
       <section class="section" id="about">
-        <div class="container split">
+        <div class="container split about-center">
           <div class="reveal">
             <img
               src="assets/img/logo2.jpg"
               alt="About Dimaensa"
               loading="lazy"
+              class="about-logo"
             />
           </div>
           <div class="reveal">
-            <div
-              class="section-heading"
-              style="text-align: left; margin-bottom: 12px"
-            >
+            <div class="section-heading center-text">
               <h2>About Us</h2>
               <p>Abelemkpe, Accra</p>
             </div>
@@ -219,10 +190,6 @@
             style="padding: 24px; max-width: 720px; margin: 0 auto"
           >
             <h3 style="margin-top: 0">Download the full menu</h3>
-            <p>
-              Get every dish, drink, and group option in one file you can save
-              or print.
-            </p>
             <ul style="margin: 12px 0 16px; padding-left: 18px">
               <li>Local dishes, grills, soups, and rice meals</li>
               <li>Family platters and group-friendly portions</li>
@@ -239,60 +206,6 @@
             </a>
             <p style="margin-top: 12px; font-size: 0.95rem; color: #6d6258">
               Tip: save it to your phone for quick reorders.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <section class="section" id="explore">
-        <div class="container">
-          <div class="section-heading reveal">
-            <h2>Explore What We Have Here</h2>
-            <p>
-              Browse the highlights and grab the PDF menu for full pricing,
-              combos, and drinks.
-            </p>
-          </div>
-
-          <div class="grid grid-3">
-            <div class="card reveal">
-              <div class="card-body">
-                <h3 class="card-title">Local favorites</h3>
-                <p class="card-text">
-                  Banku, fufu, kenkey, waakye, and comforting soups.
-                </p>
-              </div>
-            </div>
-            <div class="card reveal">
-              <div class="card-body">
-                <h3 class="card-title">Rice & grills</h3>
-                <p class="card-text">
-                  Jollof, fried rice, grilled chicken, pork, and tilapia.
-                </p>
-              </div>
-            </div>
-            <div class="card reveal">
-              <div class="card-body">
-                <h3 class="card-title">Sips & add-ons</h3>
-                <p class="card-text">
-                  Fresh juices, soft drinks, sides, and group platters.
-                </p>
-              </div>
-            </div>
-          </div>
-
-          <div class="reveal" style="margin-top: 24px; text-align: center">
-            <a
-              class="btn btn-primary"
-              href="assets/menu.pdf"
-              download
-              target="_blank"
-              rel="noopener"
-            >
-              Download PDF Menu
-            </a>
-            <p style="margin-top: 10px">
-              Keep it handy for dine-in or takeaway orders.
             </p>
           </div>
         </div>
@@ -342,11 +255,8 @@
 
       <section class="section" id="reservations">
         <div class="container split">
-          <div class="reveal">
-            <div
-              class="section-heading"
-              style="text-align: left; margin-bottom: 10px"
-            >
+          <div class="reveal center-block">
+            <div class="section-heading center-text">
               <h2>Reservations</h2>
               <p>Book a table for your next visit.</p>
             </div>
@@ -413,11 +323,8 @@
 
       <section class="section" id="contact">
         <div class="container split">
-          <div class="reveal">
-            <div
-              class="section-heading"
-              style="text-align: left; margin-bottom: 10px"
-            >
+          <div class="reveal center-block">
+            <div class="section-heading center-text">
               <h2>Contact</h2>
               <p>We would love to hear from you.</p>
             </div>
