--- a/index.html
+++ b/index.html
@@ -3,468 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="refresh" content="0; url=home.html" />
     <meta
       name="description"
       content="Dimaensa Restaurant in Accra - authentic Ghanaian cuisine with a warm, homely dining experience."
     />
     <title>Dimaensa Restaurant | Authentic Ghanaian Dining</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="icon" type="image/jpeg" href="assets/img/logo2.jpg" />
     <link rel="apple-touch-icon" href="assets/img/logo2.jpg" />
-    <meta name="theme-color" content="#8B4513" />
+    <link rel="canonical" href="home.html" />
+    <style>
+      body {
+        margin: 0;
+        font-family: system-ui, -apple-system, sans-serif;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 100vh;
+        background: #f5f1e8;
+        color: #4a3a2a;
+      }
+      .loader {
+        text-align: center;
+      }
+      .loader h1 {
+        font-size: 2rem;
+        margin: 0 0 1rem;
+        color: #8b5e3c;
+      }
+      .loader p {
+        margin: 0;
+        opacity: 0.7;
+      }
+    </style>
   </head>
   <body>
-    <header>
-      <div class="container navbar">
-        <div class="brand">
-          <div class="logo">DR</div>
-          <span>Dimaensa Restaurant</span>
-        </div>
-        <button
-          class="nav-toggle"
-          aria-label="Toggle navigation"
-          aria-expanded="false"
+    <div class="loader">
+      <h1>Dimaensa Restaurant</h1>
+      <p>Redirecting to home page...</p>
+      <p style="margin-top: 1rem">
+        <a href="home.html" style="color: #8b5e3c; text-decoration: underline"
+          >Click here if not redirected</a
         >
-          ☰
-        </button>
-        <nav class="nav-links">
-          <a href="#home">Home</a>
-          <a href="#about">About</a>
-          <a href="#menu">Menu</a>
-          <a href="#reservations">Reservations</a>
-          <a href="#contact">Contact</a>
-        </nav>
-      </div>
-    </header>
-
-    <main>
-      <section id="home" class="hero">
-        <img
-          src="assets/img/hero.png"
-          alt="Warm Ghanaian dining atmosphere"
-          loading="lazy"
-        />
-        <div class="hero-content reveal">
-          <h1>Welcome to Dimaensa Restaurant</h1>
-          <p>
-            Where authentic Ghanaian flavors meet a warm, homely dining
-            experience. Eat till the last drop.
-          </p>
-          <div class="actions">
-            <a class="btn btn-primary" href="#menu">Explore Our Menu</a>
-          </div>
-        </div>
-      </section>
-
-      <section class="section" id="intro">
-        <div class="container split">
-          <div class="intro-box reveal">
-            <h2
-              style="font-family: 'Playfair Display', serif; margin: 0 0 12px"
-            >
-              A Taste of Home
-            </h2>
-            <p>
-              At Dimaensa, we bring you delicious Ghanaian dishes made with
-              passion, tradition, and the finest local ingredients. Whether you
-              crave banku and tilapia or hearty local soups, we serve food that
-              warms the soul.
-            </p>
-          </div>
-          <div class="reveal">
-            <img
-              src="assets/img/image.png"
-              alt="Ghanaian dishes"
-              loading="lazy"
-            />
-          </div>
-        </div>
-      </section>
-
-      <section class="section" id="featured">
-        <div class="container" style="max-width: 900px; margin: 0 auto">
-          <div class="section-heading reveal">
-            <h2>Featured Dishes</h2>
-            <p>Favorites our guests love most.</p>
-          </div>
-          <div class="grid grid-4">
-            <div class="card reveal">
-              <img
-                src="assets/img/bankuwithtilpia.jpg"
-                alt="Banku & Tilapia"
-                loading="lazy"
-              />
-              <div class="card-body">
-                <h3 class="card-title">Banku &amp; Grilled Tilapia</h3>
-                <p class="card-text">
-                  Smoky tilapia paired with soft banku and spicy shito.
-                </p>
-              </div>
-            </div>
-            <div class="card reveal">
-              <img
-                src="assets/img/fufuwithlighsoup.jpg"
-                alt="Fufu with Light Soup"
-                loading="lazy"
-              />
-              <div class="card-body">
-                <h3 class="card-title">Fufu with Light Soup</h3>
-                <p class="card-text">
-                  Comforting light soup with tender meat, served with soft fufu.
-                </p>
-              </div>
-            </div>
-            <div class="card reveal">
-              <img
-                src="assets/img/jollofricewithgrilledchicken.jpg"
-                alt="Jollof Rice with Grilled Chicken"
-                loading="lazy"
-              />
-              <div class="card-body">
-                <h3 class="card-title">Jollof Rice with Grilled Chicken</h3>
-                <p class="card-text">
-                  Fragrant jollof rice with perfectly grilled, juicy chicken.
-                </p>
-              </div>
-            </div>
-            <div class="card reveal">
-              <img
-                src="assets/img/Wok-tossed rice with colorful veggies and your protein choice..jpg"
-                alt="Fried Rice"
-                loading="lazy"
-              />
-              <div class="card-body">
-                <h3 class="card-title">Fried Rice with Beef or Chicken</h3>
-                <p class="card-text">
-                  Wok-tossed rice with colorful veggies and your protein choice.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="section" id="about">
-        <div class="container split about-center">
-          <div class="reveal">
-            <img
-              src="assets/img/logo2.jpg"
-              alt="About Dimaensa"
-              loading="lazy"
-              class="about-logo"
-            />
-          </div>
-          <div class="reveal">
-            <div class="section-heading center-text">
-              <h2>About Us</h2>
-              <p>Abelemkpe, Accra</p>
-            </div>
-            <p>
-              Dimaensa Restaurant is a welcoming dining space located in
-              Abelemkpe, Accra. Our name comes from a popular Ghanaian
-              expression that means ‘eat till the last drop’ — a reminder of the
-              joy great food brings.<br /><br />
-              We blend traditional Ghanaian dishes with warm hospitality,
-              creating a homely environment for friends, families, and food
-              lovers. Whether you’re stopping by for lunch, dinner, or a relaxed
-              evening meal, Dimaensa offers a true taste of Ghana.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <section class="section" id="menu">
-        <div class="container">
-          <div class="section-heading reveal">
-            <h2>Menu</h2>
-            <p>
-              Download our complete PDF menu for prices, combos, and daily
-              specials.
-            </p>
-          </div>
-
-          <div
-            class="card reveal"
-            style="padding: 24px; max-width: 720px; margin: 0 auto"
-          >
-            <h3 style="margin-top: 0">Download the full menu</h3>
-            <ul style="margin: 12px 0 16px; padding-left: 18px">
-              <li>Local dishes, grills, soups, and rice meals</li>
-              <li>Family platters and group-friendly portions</li>
-              <li>Fresh juices, soft drinks, and sides</li>
-            </ul>
-            <a
-              class="btn btn-primary"
-              href="assets/menu.pdf"
-              download
-              target="_blank"
-              rel="noopener"
-            >
-              Download PDF Menu
-            </a>
-            <p style="margin-top: 12px; font-size: 0.95rem; color: #6d6258">
-              Tip: save it to your phone for quick reorders.
-            </p>
-          </div>
-        </div>
-      </section>
-
-      <section class="section" id="reviews">
-        <div class="container">
-          <div class="section-heading reveal">
-            <h2>Customer Reviews</h2>
-            <p>What our guests are saying about Dimaensa.</p>
-          </div>
-
-          <div class="grid grid-3">
-            <div class="card reveal">
-              <div class="card-body">
-                <p class="card-text" style="font-style: italic">
-                  “The banku and tilapia taste just like home. Friendly team and
-                  fast service.”
-                </p>
-                <h4 class="card-title" style="margin-top: 12px">Ama K.</h4>
-                <p class="card-text">Abelemkpe • Dined with family</p>
-              </div>
-            </div>
-            <div class="card reveal">
-              <div class="card-body">
-                <p class="card-text" style="font-style: italic">
-                  “We ordered jollof and grilled chicken for a work
-                  lunch—everyone loved it.”
-                </p>
-                <h4 class="card-title" style="margin-top: 12px">David M.</h4>
-                <p class="card-text">Accra • Corporate catering</p>
-              </div>
-            </div>
-            <div class="card reveal">
-              <div class="card-body">
-                <p class="card-text" style="font-style: italic">
-                  “Great portions, rich soups, and the fresh juice was perfect.
-                  Will be back.”
-                </p>
-                <h4 class="card-title" style="margin-top: 12px">Nana E.</h4>
-                <p class="card-text">Airport Residential • Date night</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="section" id="reservations">
-        <div class="container split">
-          <div class="reveal center-block">
-            <div class="section-heading center-text">
-              <h2>Reservations</h2>
-              <p>Book a table for your next visit.</p>
-            </div>
-            <p>
-              Prefer a specific time or need space for a group? Let us know and
-              we will make it welcoming for you.
-              <br />Prefer to call? Dial
-              <a href="tel:0532411380"><strong>0532411380</strong></a> to order
-              or book.
-            </p>
-          </div>
-          <div class="reveal">
-            <form id="reservation-form" class="form form-grid">
-              <div class="form-group">
-                <label for="full-name">Full Name</label>
-                <input type="text" id="full-name" name="full-name" required />
-              </div>
-              <div class="form-group">
-                <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="phone" required />
-              </div>
-              <div class="form-group">
-                <label for="date">Date</label>
-                <input type="date" id="date" name="date" required />
-              </div>
-              <div class="form-group">
-                <label for="time">Time</label>
-                <input type="time" id="time" name="time" required />
-              </div>
-              <div class="form-group">
-                <label for="guests">Number of Guests</label>
-                <select id="guests" name="guests" required>
-                  <option value="">Select</option>
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
-                  <option>6+</option>
-                </select>
-              </div>
-              <div class="form-group full-span">
-                <label for="request">Special Request (optional)</label>
-                <textarea
-                  id="request"
-                  name="request"
-                  placeholder="Allergies, celebrations, seating preferences..."
-                ></textarea>
-              </div>
-              <button
-                type="submit"
-                class="btn btn-primary full-span"
-                style="width: 100%"
-              >
-                Submit
-              </button>
-              <div class="success-message full-span">
-                Thank you! Your reservation request has been received.
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
-
-      <section class="section" id="contact">
-        <div class="container split">
-          <div class="reveal center-block">
-            <div class="section-heading center-text">
-              <h2>Contact</h2>
-              <p>We would love to hear from you.</p>
-            </div>
-            <p>
-              <strong>Address:</strong> 52 Swaniker Street, Abelemkpe, Accra<br />
-              <strong>Phone:</strong> 0532411380<br />
-              <strong>Email:</strong>
-              <a href="mailto:dimaensagh@gmail.com">dimaensagh@gmail.com</a
-              ><br />
-              <strong>WhatsApp:</strong>
-              <a
-                href="https://wa.me/233242001247"
-                target="_blank"
-                rel="noopener"
-                >+233242001247</a
-              ><br />
-              <strong>Instagram:</strong>
-              <a
-                href="https://www.instagram.com/dimaensa_?igsh=MXNlY3YzbHIwOHRzMw=="
-                target="_blank"
-                rel="noopener"
-                >@dimaensa_</a
-              ><br />
-              <strong>Hours:</strong> 11:30 AM – 11:00 PM
-            </p>
-          </div>
-          <div class="reveal" style="width: 100%">
-            <iframe
-              class="map-embed"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.6091522927417!2d-0.213!3d5.610!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNcKwMzYnMzYuMCJOIDDCsDEyJzQ2LjgiVw!5e0!3m2!1sen!2sgh!4v00000000000"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-              title="Google map"
-            ></iframe>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <footer class="footer" id="footer">
-      <div class="container">
-        <div class="brand">
-          <div class="logo">DR</div>
-          <span>Dimaensa Restaurant</span>
-        </div>
-        <div class="footer-links">
-          <a href="#home">Home</a>
-          <a href="#about">About</a>
-          <a href="#menu">Menu</a>
-          <a href="#explore">Explore</a>
-          <a href="#reservations">Reservations</a>
-          <a href="#contact">Contact</a>
-        </div>
-        <div class="social">
-          <a href="mailto:dimaensagh@gmail.com" aria-label="Email">
-            <svg
-              width="18"
-              height="18"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M4 6h16a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1z"
-                stroke="currentColor"
-                stroke-width="1.6"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M5 8l6.5 4.5a2 2 0 0 0 2.3 0L20 8"
-                stroke="currentColor"
-                stroke-width="1.6"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </a>
-          <a
-            href="https://wa.me/233242001247"
-            target="_blank"
-            rel="noopener"
-            aria-label="WhatsApp"
-          >
-            <svg
-              width="18"
-              height="18"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M12 3a9 9 0 0 0-7.9 13.2L3 21l4.9-1.1A9 9 0 1 0 12 3z"
-                stroke="currentColor"
-                stroke-width="1.6"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-              <path
-                d="M9.8 8.6c-.1-.3-.2-.3-.3-.3h-.3c-.1 0-.3 0-.5.2s-.6.5-.6 1.2.6 1.4.7 1.5c.1.2 1.2 1.9 3 2.6 1.5.6 1.8.5 2.1.5.3 0 1-.4 1.1-.8s.1-.7.1-.8c0-.1-.1-.2-.3-.3l-1-.5c-.1-.1-.2-.1-.3.1l-.4.6c-.1.1-.2.1-.3.1-.1 0-.6-.2-1.1-.6-.4-.3-.7-.8-.8-.9-.1-.1 0-.2.1-.3l.2-.2c.1-.1.1-.2.2-.3.1-.1 0-.2 0-.3l-.4-1c-.1-.1-.3-.2-.4-.2h-.3c-.3 0-.6.2-.7.3l-.3.4c-.2.2-.2.4-.1.7z"
-                fill="currentColor"
-              />
-            </svg>
-          </a>
-          <a
-            href="https://www.instagram.com/dimaensa_?igsh=MXNlY3YzbHIwOHRzMw=="
-            target="_blank"
-            rel="noopener"
-            aria-label="Instagram"
-          >
-            <svg
-              width="18"
-              height="18"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <rect
-                x="4"
-                y="4"
-                width="16"
-                height="16"
-                rx="4"
-                stroke="currentColor"
-                stroke-width="1.6"
-              />
-              <path
-                d="M12 9a3 3 0 1 0 0 6 3 3 0 0 0 0-6z"
-                stroke="currentColor"
-                stroke-width="1.6"
-              />
-              <circle cx="17" cy="7" r="1" fill="currentColor" />
-            </svg>
-          </a>
-        </div>
-        <small>© 2025 Dimaensa Restaurant. All Rights Reserved.</small>
-      </div>
-    </footer>
-
-    <script src="assets/js/main.js"></script>
+      </p>
+    </div>
+    <script>
+      // Instant redirect for JavaScript-enabled browsers
+      window.location.replace("home.html");
+    </script>
   </body>
 </html>
