--- a/home.html
+++ b/home.html
@@ -150,7 +150,7 @@
         <div class="container split about-center">
           <div class="reveal">
             <img
-              src="assets/img/logo2.jpg"
+              src="assets/img/logo2-removebg-preview.png"
               alt="About Dimaensa"
               loading="lazy"
               class="about-logo"
@@ -325,7 +325,7 @@
         <div class="container split">
           <div class="reveal center-block">
             <div class="section-heading center-text">
-              <h2>Contact</h2>
+              <h2>Contact Us</h2>
               <p>We would love to hear from you.</p>
             </div>
             <p>
@@ -352,6 +352,15 @@
             </p>
           </div>
           <div class="reveal" style="width: 100%">
+            <h3
+              style="
+                margin: 0 0 16px;
+                text-align: center;
+                color: var(--color-primary);
+              "
+            >
+              Find Us on Google Map
+            </h3>
             <iframe
               class="map-embed"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3964.6091522927417!2d-0.213!3d5.610!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNcKwMzYnMzYuMCJOIDDCsDEyJzQ2LjgiVw!5e0!3m2!1sen!2sgh!4v00000000000"
@@ -360,6 +369,30 @@
               referrerpolicy="no-referrer-when-downgrade"
               title="Google map"
             ></iframe>
+            <div
+              style="
+                margin-top: 16px;
+                padding: 16px;
+                background: rgba(139, 94, 60, 0.08);
+                border-radius: 12px;
+                text-align: center;
+              "
+            >
+              <p
+                style="
+                  margin: 0 0 8px;
+                  font-weight: 600;
+                  color: var(--color-accent);
+                "
+              >
+                📍 Directions for Rideshare Apps
+              </p>
+              <p style="margin: 0; font-size: 15px">
+                <strong>Uber / Bolt / Yango:</strong> Search
+                <strong>"Dimaensa Restaurant"</strong> or
+                <strong>"52 Swaniker Street, Abelemkpe"</strong>
+              </p>
+            </div>
           </div>
         </div>
       </section>
