--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <link rel="icon" type="image/jpeg" href="assets/img/logo2.jpg" />
-    <link rel="apple-touch-icon" href="assets/img/logo2.jpg" />
+    <link rel="apple-touch-icon" href="assets/img/logo2-removebg-preview.png" />
     <meta name="theme-color" content="#8B4513" />
   </head>
   <body>
