--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
       content="Dimaensa Restaurant in Accra - authentic Ghanaian cuisine with a warm, homely dining experience."
     />
     <title>Dimaensa Restaurant | Authentic Ghanaian Dining</title>
-    <link rel="icon" type="image/jpeg" href="assets/img/logo2.jpg" />
-    <link rel="apple-touch-icon" href="assets/img/logo2.jpg" />
+    <link
+      rel="icon"
+      type="image/jpeg"
+      href="assets/img/logo2-removebg-preview.png"
+    />
+    <link rel="apple-touch-icon" href="assets/img/logo2-removebg-preview.png" />
     <link rel="canonical" href="home.html" />
     <style>
       body {
