--- a/home.html
+++ b/home.html
@@ -269,7 +269,13 @@
             </p>
           </div>
           <div class="reveal">
-            <form id="reservation-form" class="form form-grid">
+            <form
+              id="reservation-form"
+              class="form form-grid"
+              name="reservation"
+              method="POST"
+              netlify
+            >
               <div class="form-group">
                 <label for="full-name">Full Name</label>
                 <input type="text" id="full-name" name="full-name" required />
