placed reservation form at the center

--- a/home.html
+++ b/home.html
@@ -275,10 +275,14 @@
               method="POST"
               action="https://formsubmit.co/aethelisgh@gmail.com"
             >
-              <input type="hidden" name="_subject" value="New Table Reservation">
-              <input type="hidden" name="_captcha" value="false">
-              <input type="hidden" name="_template" value="table">
-              <input type="hidden" name="_next" value="thank-you.html">
+              <input
+                type="hidden"
+                name="_subject"
+                value="New Table Reservation"
+              />
+              <input type="hidden" name="_captcha" value="false" />
+              <input type="hidden" name="_template" value="table" />
+              <input type="hidden" name="_next" value="thank-you.html" />
               <div class="form-group">
                 <label for="full-name">Full Name</label>
                 <input type="text" id="full-name" name="name" required />
