resolved POST for form redirect

--- a/home.html
+++ b/home.html
@@ -282,7 +282,11 @@
               />
               <input type="hidden" name="_captcha" value="false" />
               <input type="hidden" name="_template" value="table" />
-              <input type="hidden" name="_next" value="thank-you.html" />
+              <input
+                type="hidden"
+                name="_next"
+                value="https://dimaensa.netlify.app/thank-you.html"
+              />
               <div class="form-group">
                 <label for="full-name">Full Name</label>
                 <input type="text" id="full-name" name="name" required />
