--- a/home.html
+++ b/home.html
@@ -348,17 +348,87 @@
             <p>
               <strong>Address:</strong> 52 Swaniker Street, Abelemkpe, Accra<br />
               <strong>Phone:</strong> 0532411380<br />
-              <strong>Email:</strong>
+              <strong></strong>
+              <svg
+                width="16"
+                height="16"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
+                style="margin: 0 6px -2px 6px"
+              >
+                <path
+                  d="M4 6h16a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1z"
+                  stroke="currentColor"
+                  stroke-width="1.6"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M5 8l6.5 4.5a2 2 0 0 0 2.3 0L20 8"
+                  stroke="currentColor"
+                  stroke-width="1.6"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
               <a href="mailto:dimaensagh@gmail.com">dimaensagh@gmail.com</a
               ><br />
-              <strong>WhatsApp:</strong>
+              <strong></strong>
+              <svg
+                width="16"
+                height="16"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
+                style="margin: 0 6px -2px 6px"
+              >
+                <path
+                  d="M12 3a9 9 0 0 0-7.9 13.2L3 21l4.9-1.1A9 9 0 1 0 12 3z"
+                  stroke="currentColor"
+                  stroke-width="1.6"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M9.8 8.6c-.1-.3-.2-.3-.3-.3h-.3c-.1 0-.3 0-.5.2s-.6.5-.6 1.2.6 1.4.7 1.5c.1.2 1.2 1.9 3 2.6 1.5.6 1.8.5 2.1.5.3 0 1-.4 1.1-.8s.1-.7.1-.8c0-.1-.1-.2-.3-.3l-1-.5c-.1-.1-.2-.1-.3.1l-.4.6c-.1.1-.2.1-.3.1-.1 0-.6-.2-1.1-.6-.4-.3-.7-.8-.8-.9-.1-.1 0-.2.1-.3l.2-.2c.1-.1.1-.2.2-.3.1-.1 0-.2 0-.3l-.4-1c-.1-.1-.3-.2-.4-.2h-.3c-.3 0-.6.2-.7.3l-.3.4c-.2.2-.2.4-.1.7z"
+                  fill="currentColor"
+                />
+              </svg>
               <a
                 href="https://wa.me/233242001247"
                 target="_blank"
                 rel="noopener"
                 >+233242001247</a
               ><br />
-              <strong>Instagram:</strong>
+              <strong></strong>
+              <svg
+                width="16"
+                height="16"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
+                style="margin: 0 6px -2px 6px"
+              >
+                <rect
+                  x="4"
+                  y="4"
+                  width="16"
+                  height="16"
+                  rx="4"
+                  stroke="currentColor"
+                  stroke-width="1.6"
+                />
+                <path
+                  d="M12 9a3 3 0 1 0 0 6 3 3 0 0 0 0-6z"
+                  stroke="currentColor"
+                  stroke-width="1.6"
+                />
+                <circle cx="17" cy="7" r="1" fill="currentColor" />
+              </svg>
               <a
                 href="https://www.instagram.com/dimaensa_?igsh=MXNlY3YzbHIwOHRzMw=="
                 target="_blank"
