--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="0; url=home.html" />
     <meta
       name="description"
       content="Dimaensa Restaurant in Accra - authentic Ghanaian cuisine with a warm, homely dining experience."
@@ -16,44 +15,9 @@
     />
     <link rel="apple-touch-icon" href="assets/img/logo2-removebg-preview.png" />
     <link rel="canonical" href="home.html" />
-    <style>
-      body {
-        margin: 0;
-        font-family: system-ui, -apple-system, sans-serif;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        min-height: 100vh;
-        background: #f5f1e8;
-        color: #4a3a2a;
-      }
-      .loader {
-        text-align: center;
-      }
-      .loader h1 {
-        font-size: 2rem;
-        margin: 0 0 1rem;
-        color: #8b5e3c;
-      }
-      .loader p {
-        margin: 0;
-        opacity: 0.7;
-      }
-    </style>
+    <meta name="robots" content="noindex" />
   </head>
   <body>
-    <div class="loader">
-      <h1>Dimaensa Restaurant</h1>
-      <p>Redirecting to home page...</p>
-      <p style="margin-top: 1rem">
-        <a href="home.html" style="color: #8b5e3c; text-decoration: underline"
-          >Click here if not redirected</a
-        >
-      </p>
-    </div>
-    <script>
-      // Instant redirect for JavaScript-enabled browsers
-      window.location.replace("home.html");
-    </script>
+    <!-- This file intentionally left minimal. Root is rewritten to home.html via Netlify. -->
   </body>
 </html>
