--- a/thank-you.html
+++ b/thank-you.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Thank you for your reservation at Dimaensa Restaurant."
+      content="Your Dimaensa order was received. See next steps and delivery details."
     />
-    <title>Reservation Confirmed | Dimaensa Restaurant</title>
+    <title>Order Confirmed | Dimaensa Restaurant</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="assets/css/styles.css?v=2025-12-19-1" />
@@ -33,7 +33,7 @@
           <a href="home.html#home">Home</a>
           <a href="home.html#about">About</a>
           <a href="home.html#menu">Menu</a>
-          <a href="home.html#reservations">Reservations</a>
+          <a href="home.html#order">Order</a>
           <a href="home.html#contact">Contact</a>
         </nav>
       </div>
@@ -81,7 +81,7 @@
                 color: var(--color-accent);
               "
             >
-              Reservation Received!
+              Order Received!
             </h1>
 
             <p
@@ -91,9 +91,8 @@
                 color: rgba(74, 58, 42, 0.8);
               "
             >
-              Thank you for choosing Dimaensa Restaurant. We've received your
-              reservation request and will confirm it shortly via phone or
-              email.
+              Thank you for ordering with Dimaensa. We've received your order
+              and are confirming payment and delivery details now.
             </p>
 
             <div
@@ -111,13 +110,13 @@
                   color: var(--color-accent);
                 "
               >
-                📧 Confirmation on the Way
+                🚚 Your order is being processed
               </p>
               <p
                 style="margin: 0; font-size: 15px; color: rgba(74, 58, 42, 0.8)"
               >
-                Our team will review your request and reach out within 24 hours.
-                If you need immediate assistance, please call us at
+                We're preparing your order. If you need to update your address
+                or payment, please call us at
                 <a
                   href="tel:0532411380"
                   style="color: var(--color-primary); font-weight: 600"
@@ -135,7 +134,9 @@
                 flex-wrap: wrap;
               "
             >
-              <a href="home.html#home" class="btn btn-primary"> Return Home </a>
+              <a href="order.html" class="btn btn-primary">
+                Place another order
+              </a>
               <a href="home.html#menu" class="btn btn-ghost"> View Menu </a>
             </div>
           </div>
