--- a/home.html
+++ b/home.html
@@ -37,6 +37,7 @@
         <nav class="nav-links">
           <a href="#home">Home</a>
           <a href="#about">About</a>
+          <a href="order.html">Order Online</a>
           <a href="#menu">Menu</a>
           <a href="#reservations">Reservations</a>
           <a href="#contact">Contact</a>
@@ -58,7 +59,8 @@
             experience. Eat till the last drop.
           </p>
           <div class="actions">
-            <a class="btn btn-primary" href="#menu">Explore Our Menu</a>
+            <a class="btn btn-primary" href="order.html">Order Online</a>
+            <a class="btn btn-ghost" href="#menu">View Menu</a>
           </div>
         </div>
       </section>
