--- a/order.html
+++ b/order.html
@@ -10,8 +10,8 @@
     <title>Order Online | Dimaensa Restaurant</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="assets/css/styles.css?v=2025-12-22-1" />
-    <link rel="stylesheet" href="assets/css/order.css" />
+    <link rel="stylesheet" href="assets/css/styles.css?v=2025-12-22-2" />
+    <link rel="stylesheet" href="assets/css/order.css?v=2025-12-22-2" />
     <link rel="icon" type="image/jpeg" href="assets/img/logo2.jpg" />
     <meta name="theme-color" content="#8B4513" />
   </head>
